--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello Git,</h1>
+<nav style="background: blue; width: 100%;">
+    <ul style="list-style-type: none; display: flex;">
+        <li><a style="text-decoration: none; margin-left: 10px; color: #fff;" href="./page1.html">Page 1</a></li>
+        <li><a style="text-decoration: none; margin-left: 10px; color: #fff;" href="./page2.html">Page 2</a></li>
+        <li><a style="text-decoration: none; margin-left: 10px; color: #fff;" href="./page3.html">Page 3</a></li>
+    </ul>
+</nav>
+
+<h1>Home page</h1>
