--- a/index.html
+++ b/index.html
@@ -8,3 +8,6 @@
 
 <h1>Home page</h1>
 <p>Here is about the best teacher (Ronan🧑‍🏫)</p>
+<form action="#">
+    <input type="text" placeholder="text field!">
+</form>
