--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
 <p>Here is about the best teacher (Ronan🧑‍🏫)</p>
 <form action="#">
     <input type="text" placeholder="text field!">
+    <br>
+    <label for="1">checkbox</label>
+    <input type="checkbox" name="checkbox" id="1">
 </form>
