--- a/index.html
+++ b/index.html
@@ -13,4 +13,6 @@
     <br>
     <label for="1">checkbox</label>
     <input type="checkbox" name="checkbox" id="1">
+    <br>
+    <textarea name="" id="" cols="30" rows="10"></textarea>
 </form>
