--- a/index.html
+++ b/index.html
@@ -15,4 +15,12 @@
     <input type="checkbox" name="checkbox" id="1">
     <br>
     <textarea name="" id="" cols="30" rows="10"></textarea>
+    <label for="cars">Choose a car:</label>
+    <select name="cars" id="cars">
+        <option value="volvo">Volvo</option>
+        <option value="saab">Saab</option>
+        <option value="opel">Opel</option>
+        <option value="audi">Audi</option>
+    </select>
+    <br><br>
 </form>
